--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo</title>
     <style>
         body {
             height: 100vh;
@@ -18,11 +18,12 @@
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
             border-radius: 15px;
+            box-shadow: 1px 2px 2px black;
         }
     </style>
 </head>
@@ -31,6 +32,18 @@
         <h1>
             Teste de imagem de Fundo</h1>
             <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore facere rem reiciendis minima dicta aperiam dolorum dolorem nostrum laboriosam incidunt odit ullam perspiciatis et, tempora quae recusandae repellendus delectus eveniet?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sunt. Aliquid eius odit recusandae unde aspernatur vel temporibus maxime corrupti placeat illo. In sunt assumenda at tempore aperiam minus sit.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse in, inventore ratione repellat laudantium sint eveniet suscipit officiis quia ipsam. Sed ipsa id veritatis deleniti illum quis atque, ducimus molestias!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque, fugiat magni in laudantium tempora porro molestiae ipsa odio quia cum voluptates mollitia blanditiis non quis dignissimos esse dicta impedit!
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore facere rem reiciendis minima dicta aperiam dolorum dolorem nostrum laboriosam incidunt odit ullam perspiciatis et, tempora quae recusandae repellendus delectus eveniet?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sunt. Aliquid eius odit recusandae unde aspernatur vel temporibus maxime corrupti placeat illo. In sunt assumenda at tempore aperiam minus sit.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse in, inventore ratione repellat laudantium sint eveniet suscipit officiis quia ipsam. Sed ipsa id veritatis deleniti illum quis atque, ducimus molestias!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque, fugiat magni in laudantium tempora porro molestiae ipsa odio quia cum voluptates mollitia blanditiis non quis dignissimos esse dicta impedit!
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore facere rem reiciendis minima dicta aperiam dolorum dolorem nostrum laboriosam incidunt odit ullam perspiciatis et, tempora quae recusandae repellendus delectus eveniet?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sunt. Aliquid eius odit recusandae unde aspernatur vel temporibus maxime corrupti placeat illo. In sunt assumenda at tempore aperiam minus sit.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse in, inventore ratione repellat laudantium sint eveniet suscipit officiis quia ipsam. Sed ipsa id veritatis deleniti illum quis atque, ducimus molestias!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque, fugiat magni in laudantium tempora porro molestiae ipsa odio quia cum voluptates mollitia blanditiis non quis dignissimos esse dicta impedit!
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore facere rem reiciendis minima dicta aperiam dolorum dolorem nostrum laboriosam incidunt odit ullam perspiciatis et, tempora quae recusandae repellendus delectus eveniet?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sunt. Aliquid eius odit recusandae unde aspernatur vel temporibus maxime corrupti placeat illo. In sunt assumenda at tempore aperiam minus sit.
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse in, inventore ratione repellat laudantium sint eveniet suscipit officiis quia ipsam. Sed ipsa id veritatis deleniti illum quis atque, ducimus molestias!
