Algumas alterações em desafios antigos

--- a/Desafios/dsf009/index.html
+++ b/Desafios/dsf009/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus videos</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        h1{
+            color:white;
+        }
+
+        body {
+            background-color: black;
+        }
+
+        a{
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <h1><strong>Vídeos legais para assistir</strong></h1>
