--- a/Desafios/dsf009/python.html
+++ b/Desafios/dsf009/python.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        h1{
+            color:white;
+        }
+
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <h1>Curso de Python</h1>
