--- a/Desafios/dsf009/hardware.html
+++ b/Desafios/dsf009/hardware.html
@@ -14,6 +14,11 @@
         body {
             background-color: black;
         }
+
+        a{
+            color:white;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
