--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -6,6 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Tabelas</title>
+    <style>
+        body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+table {
+    width: 500px;
+    border-collapse: collapse;
+    position: relative;
+}
+
+td, th {
+    border: 1.5px solid black;
+    padding: 6px;
+}
+
+caption {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    background-color: lightgray;
+}
+
+thead > tr > th {
+    position: sticky; 
+    top: -1px;
+    background-color:gray;
+}
+
+thead, tfoot {
+    background-color: gray;
+    color: white;
+}
+
+tbody > tr:nth-child(2n) {
+    background-color: lightgray;
+}
+
+td.num {
+    text-align: right;
+}
+    </style>
 </head>
 <body>
     <h1>Uso de tabelas grandes</h1>
