--- a/Exercicios/ex023/tabela004.html
+++ b/Exercicios/ex023/tabela004.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+    border: 1px solid black;
+    text-align: center;
+    width: 900px;
+}
+caption{
+    font-size: 1.3em;
+    font-weight: bold;
+    padding: 10px;
+}
+
+td, th {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+}
+
+td{
+    font-family: 'Courier New', Courier, monospace;
+}
+    </style>
 </head>
 <body>
     <h1>Exercicio de Tabelas</h1>
