--- a/Exercicios/ex020/pseudoclasse.html
+++ b/Exercicios/ex020/pseudoclasse.html
@@ -7,13 +7,17 @@
     <title>Pseudo-classes</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
         div {
             display:inline-block;
             background-color: lightgray;
-            border: 1px solid black;
+            border: 2px solid black;
             text-align: center;
             height: 200px;
             width: 200px;
+            font-weight: bolder;
         }
         
         div:hover{
