--- a/Exercicios/ex025/form001.html
+++ b/Exercicios/ex025/form001.html
@@ -18,10 +18,10 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form>
-        Nome:
-        <input type="text" name="nome" id="nome">
-        <p><input type="submit" value="Enviar"></p>
+    <form method="get" action="cadastro.php">
+        <label for="camponome">Nome:</label>
+        <input type="text" name="fnome" id="camponome">
+        <input type="submit" value="Enviar">
     </form>
 </body>
 </html>
